<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/pizza_"
    android:textColor="@color/text_app_color"
    tools:context="com.zybooks.pizzaparty.MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_people"
        android:textSize="@dimen/label_text_size"
        android:labelFor="@id/num_attend_edit_text"
        android:textColor="@color/text_app_color"
        />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeight"
        android:inputType="number"
        android:ems="5"
        android:importantForAutofill="no"
        android:hint="@string/how_many"
        android:textColor="@color/text_app_color"
        android:textColorHint="@color/text_app_color"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:text="@string/how_hungry"
        android:textColor="@color/text_app_color"
        android:textSize="@dimen/text_size"
        android:labelFor="@id/hungry_radio_group" />

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/light_radio_button"
            android:text="@string/light"
            android:textColor="@color/text_app_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/medium_radio_button"
            android:text="@string/medium"
            android:textColor="@color/text_app_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:text="@string/ravenous"
            android:textColor="@color/text_app_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:text="@string/total_pizzas"
        android:textColor="@color/text_app_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:textSize="@dimen/text_size"
        />

    <Button
        android:id="@+id/calc_button"
        style="@style/CalcButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:onClick="calculateClick"
        android:text="@string/calculate"

        app:iconTint="#009688" />

</LinearLayout>